# reverse_text

./: pyproject.toml
src/reverse_text/: main.py
tests/: test_main.py
