[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reverse_text"
version = "1.0.1"
authors = [
  { name="John Dou", email="john.dou@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pylector2022/reverse_text"
"Bug Tracker" = "https://github.com/pylector2022/reverse_text/issues"